# PacNScanner

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
assets/: app.qss  resources.qrc
assets/data/: oui.txt  services.txt
assets/i18n/: pacnscanner_en.ts  pacnscanner_tr.ts
cmake/: FindNpcap.cmake  packaging.cmake  version.cmake  version.h.in
docs/: BUILD.md  DEVELOPER_GUIDE.md  PACKAGING.md  PRIVACY.md  USER_GUIDE.md
packaging/: build-appimage.sh  generate-icons.sh  io.github.demirgitbuh.PacNScanner.metainfo.xml  pacnscanner.desktop
packaging/flatpak/: io.github.demirgitbuh.PacNScanner.yml
src/app/: CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  Device.cpp  Device.h  DeviceClassifier.cpp  DeviceClassifier.h  HostnameResolver.cpp  HostnameResolver.h  IpRange.cpp  IpRange.h  Logger.cpp  Logger.h  NetUtils.cpp  NetUtils.h  OsFingerprinter.cpp  OsFingerprinter.h  PlatformServices.h  PortProfiles.cpp  PortProfiles.h  Result.h  RiskEngine.cpp  RiskEngine.h  ScanConfig.cpp  ScanConfig.h  ScanEngine.cpp  ScanEngine.h  ScanWorker.cpp  ScanWorker.h  ServiceDetector.cpp  ServiceDetector.h  Types.h  VendorLookup.cpp  VendorLookup.h
src/core/probe/: DefaultProbeFactory.cpp  DefaultProbeFactory.h  IcmpProbe.cpp  IcmpProbe.h  Probe.h  TcpProbe.cpp  TcpProbe.h
src/platform/: AdapterUtil.cpp  AdapterUtil.h  CMakeLists.txt  PlatformFactory.cpp
src/platform/fake/: FakePlatform.cpp  FakePlatform.h
src/platform/generic/: GenericUnixPlatform.cpp  GenericUnixPlatform.h
src/platform/windows/: WindowsPlatform.cpp  WindowsPlatform.h
src/reporting/: CMakeLists.txt  Exporter.h  Exporters.cpp  HtmlReport.cpp  Importers.cpp
src/storage/: CMakeLists.txt  Database.cpp  Database.h  SettingsStore.cpp  SettingsStore.h
src/ui/: AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  DeviceDetailDialog.cpp  DeviceDetailDialog.h  DeviceFilterProxyModel.cpp  DeviceFilterProxyModel.h  DeviceTableModel.cpp  DeviceTableModel.h  IconProvider.cpp  IconProvider.h  LogPanel.cpp  LogPanel.h  MainWindow.cpp  MainWindow.h  MiniCharts.cpp  MiniCharts.h  NetworkInfoPanel.cpp  NetworkInfoPanel.h  Palette.h  SettingsDialog.cpp  SettingsDialog.h  StatCard.cpp  StatCard.h  ThemeManager.cpp  ThemeManager.h  TopologyView.cpp  TopologyView.h  UpdateChecker.cpp  UpdateChecker.h
tests/: CMakeLists.txt  test_deviceclassifier.cpp  test_iprange.cpp  test_main.cpp  test_netutils.cpp  test_portprofiles.cpp  test_reporting.cpp  test_riskengine.cpp  test_scanengine.cpp  test_servicedetector.cpp  test_ui_smoke.cpp  test_vendorlookup.cpp
tests/fake/: FakeProbeFactory.h
